# sauron

./: .gitignore  rtsp-bg.txt
edge/: .example.env  README.md  config.example.yaml  pyproject.toml  recipe.example.yaml
edge/scripts/: .example.env  deploy.py
edge/src/sauron_edge/: __init__.py  camera.py  config.py  dashboard.py  detection.py  image_uploader.py  main.py  publisher.py  schemas.py  sensors.py  shared_state.py  stability.py
pi-hardware-testing/: components.py  d1.py  dashboard.py  main.py  pyproject.toml
scripts/: rtsp-manager.sh
server/: .gitignore  deploy.sh  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt  start.sh
server/app/: config.py  main.py
server/app/api/: dashboard.py  ingestion.py
server/app/db/: connection.py  queries.py  writer.py
server/app/ingestion/: message_log.py  mqtt_client.py  schemas.py
server/app/kalman/: __init__.py  filter.py  tracker.py
server/app/static/: app.js  index.html
server/app/triangulation/: __init__.py  correlator.py  pipeline.py  triangulator.py
server/app/video/: blob_detector.py  centroid_tracker.py  stream_manager.py
server/app/vlm/: analyzer.py  scheduler.py  summarizer.py
server/mock/: Dockerfile  mqtt_mock.py  requirements.txt  simulator.py
server/tests/: test_db.py  test_kalman.py  test_triangulation.py  test_video.py
