[project]
name = "iot-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-blinka>=9.0.4",
    "adafruit-circuitpython-bno055>=5.4.21",
    "pynmea2>=1.19.0",
    "pyserial>=3.5",
    "rpi-gpio>=0.7.1",
]
