[project]
name = "sauron-server"
version = "0.1.0"
description = "Sauron IoT tracking server"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "numpy",
    "asyncpg",
    "pydantic>=2.0",
    "pydantic-settings",
    "awsiotsdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
